Fix social media links styling on mobile
The way Jason adjusted the layout for the animations threw off the spacing of the icons on the mobile nav menu.

I fixed this with a simple media query to revert back to the original styling on screens smaller than 600px.

--- a/wild-blue-yonder-website/src/components/SocialMediaLinks/social-media-links.css
+++ b/wild-blue-yonder-website/src/components/SocialMediaLinks/social-media-links.css
@@ -33,3 +33,14 @@
   opacity: 50%;
   transition: 0.2s;
 }
+
+@media (max-width: 600px) {
+  .social-media-links-wrapper {
+    gap: 40px;
+  }
+  .social-media-links-wrapper a {
+    padding-left: 0px;
+    padding-right: 0px;
+    width: auto;
+  }
+}
